[gd_scene load_steps=15 format=3 uid="uid://clsmkt0nkr4l"]

[ext_resource type="Script" path="res://mobs/pollutor.gd" id="1_ct8ds"]
[ext_resource type="Texture2D" uid="uid://dagg62mrv7da8" path="res://art/kenney_sci-fi-rts/PNG/Default size/Structure/scifiStructure_14.png" id="1_g1aag"]
[ext_resource type="AudioStream" uid="uid://dyjrplx7r1rnf" path="res://sfx/EXPLDsgn_Implode_15.wav" id="3_ft58w"]
[ext_resource type="Texture2D" uid="uid://ccjyqnr3c7ktm" path="res://art/kenney_smoke-particles/PNG/Black smoke/blackSmoke00.png" id="4_s0wuv"]
[ext_resource type="Texture2D" uid="uid://6opldvj2erl" path="res://art/kenney_smoke-particles/PNG/Black smoke/blackSmoke01.png" id="5_k2qjl"]
[ext_resource type="Texture2D" uid="uid://dwjvy5es0hp5r" path="res://art/kenney_smoke-particles/PNG/Black smoke/blackSmoke02.png" id="6_hk8qd"]
[ext_resource type="Texture2D" uid="uid://b53l1n2qiwm1s" path="res://art/kenney_smoke-particles/PNG/Black smoke/blackSmoke03.png" id="7_kxjts"]
[ext_resource type="Texture2D" uid="uid://b04xqwqd4udmt" path="res://art/kenney_smoke-particles/PNG/Black smoke/blackSmoke04.png" id="8_merdv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kaibd"]
size = Vector2(32, 54)

[sub_resource type="SpriteFrames" id="SpriteFrames_al37k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_g1aag")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_gtpp7"]
resource_name = "death"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_8w6py"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tn5mw"]
_data = {
"RESET": SubResource("Animation_8w6py"),
"death": SubResource("Animation_gtpp7")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_yxgql"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_s0wuv")
}, {
"duration": 1.0,
"texture": ExtResource("5_k2qjl")
}, {
"duration": 1.0,
"texture": ExtResource("6_hk8qd")
}, {
"duration": 1.0,
"texture": ExtResource("7_kxjts")
}, {
"duration": 1.0,
"texture": ExtResource("8_merdv")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Pollutor" type="StaticBody2D" groups=["human", "pollutor"]]
collision_layer = 3
script = ExtResource("1_ct8ds")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_kaibd")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_al37k")

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 20.0
autostart = true

[node name="AudioDeath" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_ft58w")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tn5mw")
}

[node name="AnimatedSmoke" type="AnimatedSprite2D" parent="."]
position = Vector2(3, -39)
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_yxgql")
frame_progress = 0.810688

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
